# Ingestion-Script

./: .env.template  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
